Fix overlap between system message and date
System messages have no author, so the author row only contains the
date. As the date was shown using an absolute position it had no
influence on the width calculation of other elements and thus sometimes
overlapped them (for example, when a wide system message was shown in
the sidebar, but also if the user name was too long). Now the date uses
a static position with an automatic left margin, which in practice
causes it to be right aligned (both with and without author) due to
being a child of a flex display.

--- a/css/comments.scss
+++ b/css/comments.scss
@@ -163,9 +163,11 @@ body:not(#body-public) #commentsTabView .comment .authorRow:not(.currentUser):no
 	margin-left: 5px;
 }
 #commentsTabView .comment .date {
-	position: absolute;
-	right: 0;
-	top: 5px;
+	/* "margin-left: auto" aligns the block to the right, while
+	 * "text-align: right" aligns the text inside the block to the right, for
+	 * example, when it uses two lines due to a limited width. */
+	margin-left: auto;
+	text-align: right;
 }
 
 #commentsTabView .comments li .message {
